# chord-helper

./: .gitignore  CLAUDE.md  README.md  accessibility.py  audio.py  chord_data.py  data_loader.py  generate_data.py  main.py  pyproject.toml
.github/workflows/: release.yml
data/instruments/Ukulele/A dominant 7th/: chord.txt
data/instruments/Ukulele/A major/: chord.txt
data/instruments/Ukulele/A minor/: chord.txt
data/instruments/Ukulele/A minor 7th/: chord.txt
data/instruments/Ukulele/A sharp major/: chord.txt
data/instruments/Ukulele/A sharp minor/: chord.txt
data/instruments/Ukulele/B major/: chord.txt
data/instruments/Ukulele/B minor/: chord.txt
data/instruments/Ukulele/C dominant 7th/: chord.txt
data/instruments/Ukulele/C major/: chord.txt
data/instruments/Ukulele/C major 7th/: chord.txt
data/instruments/Ukulele/C minor/: chord.txt
data/instruments/Ukulele/C sharp major/: chord.txt
data/instruments/Ukulele/D dominant 7th/: chord.txt
data/instruments/Ukulele/D major/: chord.txt
data/instruments/Ukulele/D minor/: chord.txt
data/instruments/Ukulele/D minor 7th/: chord.txt
data/instruments/Ukulele/D sharp major/: chord.txt
data/instruments/Ukulele/E major/: chord.txt
data/instruments/Ukulele/E minor/: chord.txt
data/instruments/Ukulele/F major/: chord.txt
data/instruments/Ukulele/F major 7th/: chord.txt
data/instruments/Ukulele/F minor/: chord.txt
data/instruments/Ukulele/F sharp major/: chord.txt
data/instruments/Ukulele/G dominant 7th/: chord.txt
data/instruments/Ukulele/G major/: chord.txt
(+832 files in other folders)
